Modify editor model